<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_header_general"
            android:key="pref_general">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_sync"
            android:summary="@string/pref_general_sync_summary"
            android:title="@string/pref_general_sync_title"/>
        <EditTextPreference
            android:defaultValue="@string/pref_general_id_anonymous"
            android:inputType="text"
            android:key="@string/pref_key_id"
            android:maxLines="1"
            android:maxLength="10"
            android:summary="@string/pref_general_id_summary"
            android:singleLine="true"
            android:title="@string/pref_general_id_name" />
        <EditTextPreference
            android:defaultValue="127.0.0.1"
            android:inputType="text"
            android:key="@string/pref_key_ip"
            android:maxLines="1"
            android:maxLength="15"
            android:summary="@string/pref_general_ip_summary"
            android:singleLine="true"
            android:title="@string/pref_general_ip_name" />

        <EditTextPreference
            android:defaultValue="3999"
            android:inputType="number"
            android:key="@string/pref_key_port"
            android:maxLines="1"
            android:maxLength="5"
            android:summary="@string/pref_general_port_summary"
            android:singleLine="true"
            android:title="@string/pref_general_port_name" />

        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/pref_key_password"
            android:maxLines="1"
            android:maxLength="8"
            android:summary="@string/pref_general_password_summary"
            android:singleLine="true"
            android:title="@string/pref_general_password_name" />

        <Preference android:title="@string/pref_general_about_name"
            android:key="@string/pref_key_about"
            android:summary="@string/pref_general_about_summary"/>
    </PreferenceCategory>
    <!--<PreferenceCategory-->
        <!--android:title="@string/pref_header_advance"-->
        <!--android:key="pref_advance">-->

        <!--<ListPreference-->
            <!--android:key="@string/pref_key_buffer"-->
            <!--android:title="@string/pref_advance_buffer_name"-->
            <!--android:dialogTitle="@string/pref_advance_buffer_name"-->
            <!--android:entries="@array/pref_advance_buffer_entries"-->
            <!--android:entryValues="@array/pref_advance_buffer_values"-->
            <!--android:defaultValue="@string/pref_advance_buffer_default"-->
            <!--/>-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>
